--- a/.github/workflows/punch.yml
+++ b/.github/workflows/punch.yml
@@ -1,63 +1,56 @@
 name: 我在校园打卡
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # 手动触发
   schedule:
-     - cron:  '00 14 * * *' # 默认在每天 UTC 14:00 （北京时间 22:00）执行
+    - cron: '00 14 * * *' # 每天 UTC 14:00 (北京时间 22:00) 自动执行
 
 jobs:
   User01:
     runs-on: ubuntu-latest
     environment: CONFIG_01
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
-    - name: 安装依赖
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: 执行打卡
-      env:
-        school_name: ${{secrets.school_name}}
-        receive_mail: ${{secrets.receive_mail}}
-        mail_address: ${{secrets.mail_address}}
-        mail_password: ${{secrets.mail_password}}
-        mail_host: ${{secrets.mail_host}}
-        punch_location: ${{secrets.punch_location}}
-        wzxy_username: ${{secrets.wzxy_username}}
-        wzxy_password: ${{secrets.wzxy_password}}
-        sct_ftqq: ${{secrets.sct_ftqq}}
-        dorm_sign: ${{secrets.dorm_sign}}
-        blue_sign: ${{secrets.blue_sign}}
-        tencentKey: ${{secrets.tencentKey}}
-      run: python -u actionVersion.py
+      - uses: actions/checkout@v4
 
-  # User02:
-  #   runs-on: ubuntu-latest
-  #   environment: CONFIG_02
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - name: Set up Python 3.9
-  #     uses: actions/setup-python@v4
-  #     with:
-  #       python-version: 3.9
-  #   - name: 安装依赖
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       pip install -r requirements.txt
-  #   - name: 执行打卡
-  #     env:
-  #       school_name: ${{secrets.school_name}}
-  #       receive_mail: ${{secrets.receive_mail}}
-  #       mail_address: ${{secrets.mail_address}}
-  #       mail_password: ${{secrets.mail_password}}
-  #       mail_host: ${{secrets.mail_host}}
-  #       punch_location: ${{secrets.punch_location}}
-  #       wzxy_username: ${{secrets.wzxy_username}}
-  #       wzxy_password: ${{secrets.wzxy_password}}
-  #       punch_longitude: ${{secrets.punch_longitude}}
-  #       punch_latitude: ${{secrets.punch_latitude}}
-  #     run: python actionVersion.py
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: 安装依赖
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # 临时调试步骤：测试腾讯地图 API
+      - name: Run Tencent Map connectivity test
+        env:
+          TENCENT_MAP_KEY: ${{ secrets.tencentKey }}
+        run: |
+          echo "=== Running Tencent Map test ==="
+          python3 test_tencent_map.py || echo "test_tencent_map.py exit code $?"
+
+      # 临时调试步骤：测试 SMTP
+      - name: Run SMTP connectivity test
+        env:
+          MAIL_HOST: ${{ secrets.mail_host }}
+          MAIL_PORT: ${{ secrets.mail_port }}
+        run: |
+          echo "=== Running SMTP test ==="
+          python3 test_smtp.py || echo "test_smtp.py exit code $?"
+
+      - name: 执行打卡
+        env:
+          school_name: ${{ secrets.school_name }}
+          receive_mail: ${{ secrets.receive_mail }}
+          mail_address: ${{ secrets.mail_address }}
+          mail_password: ${{ secrets.mail_password }}
+          mail_host: ${{ secrets.mail_host }}
+          punch_location: ${{ secrets.punch_location }}
+          wzxy_username: ${{ secrets.wzxy_username }}
+          wzxy_password: ${{ secrets.wzxy_password }}
+          sct_ftqq: ${{ secrets.sct_ftqq }}
+          dorm_sign: ${{ secrets.dorm_sign }}
+          blue_sign: ${{ secrets.blue_sign }}
+          tencentKey: ${{ secrets.tencentKey }}
+        run: python -u actionVersion.py
